[package]
name = "catimg-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.52", features = ["vendored"] }
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.5"
url = "2.3.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
rand = "0.8.5"
sha3 = "0.10.8"
redis = { version = "0.23.0", features = ["tokio-native-tls-comp"] }
mongodb = "2.5.0"
serde = { version = "1.0.163", features = ["derive"] }
select = "0.6.0"
#playwright = "0.0.20"
mime_guess = "2.0.4"
